tests/errors/literals/i32-overflow.fn
---
Description: Bare literal exceeds i32 maximum
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var v = 2147483648
        return 0
    }
}
